<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_motor_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josh.newans@gmail.com">newans</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>serial_motor_demo_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
